# netkit

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yaml
examples/capinfo/: Cargo.toml
examples/capinfo/src/: main.rs
examples/pcap-read/: Cargo.toml
examples/pcap-read/src/: main.rs
netkit-capture/: Cargo.toml
netkit-capture/src/file/: pcap.rs
netkit-packet/: Cargo.toml  README.md
netkit-packet/benches/: pprof.rs
netkit-packet/src/: layer.rs  lib.rs  mac_addr.rs  prelude.rs  utils.rs
netkit-packet/src/layer/: dns.rs  eth.rs  ip.rs  tcp.rs  udp.rs
netkit-packet/src/layer/dns/: class.rs  label.rs  name.rs  opcode.rs  question.rs  rcode.rs  rrtype.rs
netkit-packet/src/layer/eth/: eth_addr.rs  eth_type.rs
netkit-packet/src/layer/ip/: protocal.rs  protocol.rs  v4.rs
netkit-packet/src/layer/tcp/: flags.rs
netkit-packet/src/utils/: field.rs  test_enum.rs
src/: lib.rs
