[workspace]
# members = ["netkit-packet", "netkit-impl", "netkit-capture", "examples/*"]
members = ["netkit-packet", "netkit-capture", "examples/*"]

[workspace.package]
edition = "2021"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/duskmoon314/netkit"
keywords = ["network", "packet"]

[workspace.dependencies]
netkit-packet = { path = "netkit-packet", version = "0.1.0" }
netkit-capture = { path = "netkit-capture", version = "0.1.0" }

# enum helper
num_enum = "0.7.2"
strum = { version = "0.26.3", features = ["derive"] }

# bitflags
bitflags = { version = "2.6.0" }

# error helper
thiserror = "1.0.61"

# serde
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

# benchmark
criterion = "0.5.1"
pprof = { version = "0.13.0", features = [
    "flamegraph",
    "prost-codec",
    "criterion",
] }

# ========== root crate: netkit ==========

[package]
name = "netkit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE*"]

[profile.release-prof]
inherits = "release"
debug = true

[dependencies]
netkit-packet = { workspace = true }
netkit-capture = { workspace = true }
