[package]
name = "netkit-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7.2"
paste = "1.0.15"
serde = { version = "1.0.202", features = ["derive"], optional = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13.0", features = [
    "flamegraph",
    "prost-codec",
    "criterion",
] }
serde_json = "1.0.117"

[[bench]]
name = "pprof"
harness = false

[[bench]]
name = "test"
harness = false

[features]
default = ["serde"]
