[package]
name = "netkit-packet"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
include = ["src/**/*", "README.md", "LICENSE*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# enum helper
num_enum = { workspace = true }
strum = { workspace = true }

# bitflags
bitflags = { workspace = true }

# error helper
thiserror = { workspace = true }

# serde
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
pprof = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["serde"]

serde = ["dep:serde", "bitflags/serde"]
