[package]
name = "capinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
netkit = { path = "../../" }
# rusqlite = { version = "0.31.0", features = ["backup", "bundled", "chrono"] }
polars = { version = "0.40.0", features = [
    "dtype-u8",
    "dtype-u16",
    "json",
    "parquet",
    "rows",
    "streaming",
] }
rayon = "1.10.0"
